--- a/index.html
+++ b/index.html
@@ -3,63 +3,110 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/bootstrap.css" />
-    <title>Youtuby</title>
+    <link rel="stylesheet" href="/css/bootstrap-rtl.css" />
+    <title>يوتيوبي</title>
   </head>
   <body>
-    <h1 class="display-1 text-center text-uppercase font-weight-bold">
-      Youtuby
-    </h1>
-
-    <table class="table table-striped table-dark table-bordered table-hover table-sm">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr class="table-primary">
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-        </tr>
-        <tr class="bg-danger">
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-        </tr>
-        <tr>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-        </tr>
-        <tr>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-        </tr>
-        <tr>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-          <th>#</th>
-        </tr>
-      </tbody>
-    </table>
-
+    <div id="top-menu">
+      <div class="container-fluid">
+        <nav
+          class="navbar navbar-expand-lg navbar-light bg-light fixed-top rtl"
+        >
+          <a class="navbar-brand" href="index.html">يوتيوبي</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-lg-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">الفيديوهات المقترحة</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ml-lg-3" href="#">المرفوعة حديثا</a>
+              </li>
+              <li class="nav-item mr-1">
+                <a class="nav-link" href="#">الفيديوهات الرائجة</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link btn btn-outline-info text-info"
+                  href="index.html"
+                  data-toggle="modal"
+                  data-target="#loginmodal"
+                  >تسجيل الدخول</a
+                >
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input
+                class="form-control mr-sm-2"
+                type="search"
+                placeholder="إبحث"
+              />
+              <button class="btn btn-info my-2 my-sm-0" type="submit">
+                إبحث
+              </button>
+            </form>
+          </div>
+        </nav>
+        <!-- Modal -->
+        <div
+          class="modal fade rtl"
+          id="loginmodal"
+          data-backdrop="static"
+          data-keyboard="false"
+          tabindex="-1"
+          aria-labelledby="staticBackdropLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">
+                  تسجيل الدخول
+                </h5>
+                <button
+                  type="button"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="form-group">
+                  <label for="email">البريد الإلكتروني</label>
+                  <input
+                    id="my-input"
+                    class="form-control"
+                    type="email"
+                    name="email"
+                  />
+                  <label for="password">كلمة المرور</label>
+                  <input
+                    id="password"
+                    class="form-control"
+                    type="password"
+                    name="password"
+                  />
+                </div>
+              </div>
+              <div class="modal-footer">
+                <a href="">نسيت كلمة المرور</a>
+                <a href="" class="mx-auto">انشاء حساب</a>
+                <button type="button" class="btn btn-primary">دخول</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.js"></script>
