--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <link rel="stylesheet" href="/css/bootstrap-rtl.css" />
     <title>يوتيوبي</title>
   </head>
-  <body>
+  <body class="rtl">
     <div id="top-menu">
       <div class="container-fluid">
-        <nav
-          class="navbar navbar-expand-lg navbar-light bg-light fixed-top rtl"
-        >
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
           <a class="navbar-brand" href="index.html">يوتيوبي</a>
           <button
             class="navbar-toggler"
@@ -56,7 +55,7 @@
         </nav>
         <!-- Modal -->
         <div
-          class="modal fade rtl"
+          class="modal fade"
           id="loginmodal"
           data-backdrop="static"
           data-keyboard="false"
@@ -105,8 +104,292 @@
             </div>
           </div>
         </div>
+        <!-- content -->
+        <div class="content p-5">
+          <h4 class="my-5">الفيديوهات المقترحة</h4>
+          <!-- Cards -->
+            <div class="row">
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card p-1 mb-5">
+                  <a href="watch.html">
+                    <img
+                      src="images/luffy.jpg"
+                      class="card-img-top"
+                      alt="card image"
+                    />
+                    <div class="card-body ">
+                      <p class="card-text">لووووووووووووووووفييي</p>
+                    </div>
+                  </a>
+                  <div class="card-footer">
+                    <div class="container">
+                      <i class="fa-solid fa-film"></i>
+                      <span class="text-muted">3 ألاف مشاهدة</span>
+                    </div>
+                    <div class="container">
+                      <i class="fa-solid fa-clock"></i>
+                      <span class="text-muted">03:00:00</span>
+                    </div>
+                  </div>
+                  <a href="channel.html" class="channel-img mx-4 my-2">
+                    <img
+                      src="/images/luffy.jpg"
+                      class="rounded-circle object-fit-cover"
+                      width="30"
+                      height="30"
+                      alt="logo"
+                    />
+                    <span class="card-text">قناة لوفي</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card p-1 mb-5">
+                  <a href="watch.html">
+                    <img
+                      src="images/luffy.jpg"
+                      class="card-img-top"
+                      alt="card image"
+                    />
+                    <div class="card-body ">
+                      <p class="card-text">لووووووووووووووووفييي</p>
+                    </div>
+                  </a>
+                  <div class="card-footer">
+                    <div class="container">
+                      <i class="fa-solid fa-film"></i>
+                      <span class="text-muted">3 ألاف مشاهدة</span>
+                    </div>
+                    <div class="container">
+                      <i class="fa-solid fa-clock"></i>
+                      <span class="text-muted">03:00:00</span>
+                    </div>
+                  </div>
+                  <a href="channel.html" class="channel-img mx-4 my-2">
+                    <img
+                      src="/images/luffy.jpg"
+                      class="rounded-circle object-fit-cover"
+                      width="30"
+                      height="30"
+                      alt="logo"
+                    />
+                    <span class="card-text">قناة لوفي</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card p-1 mb-5">
+                  <a href="watch.html">
+                    <img
+                      src="images/luffy.jpg"
+                      class="card-img-top"
+                      alt="card image"
+                    />
+                    <div class="card-body ">
+                      <p class="card-text">لووووووووووووووووفييي</p>
+                    </div>
+                  </a>
+                  <div class="card-footer">
+                    <div class="container">
+                      <i class="fa-solid fa-film"></i>
+                      <span class="text-muted">3 ألاف مشاهدة</span>
+                    </div>
+                    <div class="container">
+                      <i class="fa-solid fa-clock"></i>
+                      <span class="text-muted">03:00:00</span>
+                    </div>
+                  </div>
+                  <a href="channel.html" class="channel-img mx-4 my-2">
+                    <img
+                      src="/images/luffy.jpg"
+                      class="rounded-circle object-fit-cover"
+                      width="30"
+                      height="30"
+                      alt="logo"
+                    />
+                    <span class="card-text">قناة لوفي</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card p-1 mb-5">
+                  <a href="watch.html">
+                    <img
+                      src="images/luffy.jpg"
+                      class="card-img-top"
+                      alt="card image"
+                    />
+                    <div class="card-body ">
+                      <p class="card-text">لووووووووووووووووفييي</p>
+                    </div>
+                  </a>
+                  <div class="card-footer">
+                    <div class="container">
+                      <i class="fa-solid fa-film"></i>
+                      <span class="text-muted">3 ألاف مشاهدة</span>
+                    </div>
+                    <div class="container">
+                      <i class="fa-solid fa-clock"></i>
+                      <span class="text-muted">03:00:00</span>
+                    </div>
+                  </div>
+                  <a href="channel.html" class="channel-img mx-4 my-2">
+                    <img
+                      src="/images/luffy.jpg"
+                      class="rounded-circle object-fit-cover"
+                      width="30"
+                      height="30"
+                      alt="logo"
+                    />
+                    <span class="card-text">قناة لوفي</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card p-1 mb-5">
+                  <a href="watch.html">
+                    <img
+                      src="images/luffy.jpg"
+                      class="card-img-top"
+                      alt="card image"
+                    />
+                    <div class="card-body ">
+                      <p class="card-text">لووووووووووووووووفييي</p>
+                    </div>
+                  </a>
+                  <div class="card-footer">
+                    <div class="container">
+                      <i class="fa-solid fa-film"></i>
+                      <span class="text-muted">3 ألاف مشاهدة</span>
+                    </div>
+                    <div class="container">
+                      <i class="fa-solid fa-clock"></i>
+                      <span class="text-muted">03:00:00</span>
+                    </div>
+                  </div>
+                  <a href="channel.html" class="channel-img mx-4 my-2">
+                    <img
+                      src="/images/luffy.jpg"
+                      class="rounded-circle object-fit-cover"
+                      width="30"
+                      height="30"
+                      alt="logo"
+                    />
+                    <span class="card-text">قناة لوفي</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card p-1 mb-5">
+                  <a href="watch.html">
+                    <img
+                      src="images/luffy.jpg"
+                      class="card-img-top"
+                      alt="card image"
+                    />
+                    <div class="card-body ">
+                      <p class="card-text">لووووووووووووووووفييي</p>
+                    </div>
+                  </a>
+                  <div class="card-footer">
+                    <div class="container">
+                      <i class="fa-solid fa-film"></i>
+                      <span class="text-muted">3 ألاف مشاهدة</span>
+                    </div>
+                    <div class="container">
+                      <i class="fa-solid fa-clock"></i>
+                      <span class="text-muted">03:00:00</span>
+                    </div>
+                  </div>
+                  <a href="channel.html" class="channel-img mx-4 my-2">
+                    <img
+                      src="/images/luffy.jpg"
+                      class="rounded-circle object-fit-cover"
+                      width="30"
+                      height="30"
+                      alt="logo"
+                    />
+                    <span class="card-text">قناة لوفي</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card p-1 mb-5">
+                  <a href="watch.html">
+                    <img
+                      src="images/luffy.jpg"
+                      class="card-img-top"
+                      alt="card image"
+                    />
+                    <div class="card-body ">
+                      <p class="card-text">لووووووووووووووووفييي</p>
+                    </div>
+                  </a>
+                  <div class="card-footer">
+                    <div class="container">
+                      <i class="fa-solid fa-film"></i>
+                      <span class="text-muted">3 ألاف مشاهدة</span>
+                    </div>
+                    <div class="container">
+                      <i class="fa-solid fa-clock"></i>
+                      <span class="text-muted">03:00:00</span>
+                    </div>
+                  </div>
+                  <a href="channel.html" class="channel-img mx-4 my-2">
+                    <img
+                      src="/images/luffy.jpg"
+                      class="rounded-circle object-fit-cover"
+                      width="30"
+                      height="30"
+                      alt="logo"
+                    />
+                    <span class="card-text">قناة لوفي</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card p-1 mb-5">
+                  <a href="watch.html">
+                    <img
+                      src="images/luffy.jpg"
+                      class="card-img-top"
+                      alt="card image"
+                    />
+                    <div class="card-body ">
+                      <p class="card-text">لووووووووووووووووفييي</p>
+                    </div>
+                  </a>
+                  <div class="card-footer">
+                    <div class="container">
+                      <i class="fa-solid fa-film"></i>
+                      <span class="text-muted">3 ألاف مشاهدة</span>
+                    </div>
+                    <div class="container">
+                      <i class="fa-solid fa-clock"></i>
+                      <span class="text-muted">03:00:00</span>
+                    </div>
+                  </div>
+                  <a href="channel.html" class="channel-img mx-4 my-2">
+                    <img
+                      src="/images/luffy.jpg"
+                      class="rounded-circle object-fit-cover"
+                      width="30"
+                      height="30"
+                      alt="logo"
+                    />
+                    <span class="card-text">قناة لوفي</span>
+                  </a>
+                </div>
+              </div>
+            </div>
+          
+        </div>
       </div>
     </div>
+    <script
+      src="https://kit.fontawesome.com/b6448fe1f7.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.js"></script>
