adding dummy content to the suggestions page

--- a/index.html
+++ b/index.html
@@ -113,27 +113,163 @@
                 <div class="card p-1 mb-5">
                   <a href="watch.html">
                     <img
-                      src="images/luffy.jpg"
+                      src="images/thumbnails/1.jpg"
                       class="card-img-top"
                       alt="card image"
                     />
                     <div class="card-body ">
-                      <p class="card-text">لووووووووووووووووفييي</p>
+                      <p class="card-text">السر وراء سرعة البرمجة</p>
                     </div>
                   </a>
                   <div class="card-footer">
                     <div class="container">
                       <i class="fa-solid fa-film"></i>
-                      <span class="text-muted">3 ألاف مشاهدة</span>
+                      <span class="text-muted">482 ألف</span>
                     </div>
                     <div class="container">
                       <i class="fa-solid fa-clock"></i>
-                      <span class="text-muted">03:00:00</span>
+                      <span class="text-muted">8:14</span>
                     </div>
                   </div>
                   <a href="channel.html" class="channel-img mx-4 my-2">
                     <img
-                      src="/images/luffy.jpg"
+                      src="/images/pfps/1.jpg"
+                      class="rounded-circle object-fit-cover"
+                      width="30"
+                      height="30"
+                      alt="logo"
+                    />
+                    <span class="card-text">CodeVibes</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card p-1 mb-5">
+                  <a href="watch.html">
+                    <img
+                      src="images/thumbnails/2.jpg"
+                      class="card-img-top"
+                      alt="card image"
+                    />
+                    <div class="card-body ">
+                      <p class="card-text">10 حيل لرفع أداء حاسوبك</p>
+                    </div>
+                  </a>
+                  <div class="card-footer">
+                    <div class="container">
+                      <i class="fa-solid fa-film"></i>
+                      <span class="text-muted">1.2 مليون</span>
+                    </div>
+                    <div class="container">
+                      <i class="fa-solid fa-clock"></i>
+                      <span class="text-muted">12:47</span>
+                    </div>
+                  </div>
+                  <a href="channel.html" class="channel-img mx-4 my-2">
+                    <img
+                      src="/images/pfps/2.jpg"
+                      class="rounded-circle object-fit-cover"
+                      width="30"
+                      height="30"
+                      alt="logo"
+                    />
+                    <span class="card-text">TechBro</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card p-1 mb-5">
+                  <a href="watch.html">
+                    <img
+                      src="images/thumbnails/3.jpg"
+                      class="card-img-top"
+                      alt="card image"
+                    />
+                    <div class="card-body ">
+                      <p class="card-text">كيف بنيت موقع في ساعة واحدة</p>
+                    </div>
+                  </a>
+                  <div class="card-footer">
+                    <div class="container">
+                      <i class="fa-solid fa-film"></i>
+                      <span class="text-muted">95 ألف</span>
+                    </div>
+                    <div class="container">
+                      <i class="fa-solid fa-clock"></i>
+                      <span class="text-muted">6:03</span>
+                    </div>
+                  </div>
+                  <a href="channel.html" class="channel-img mx-4 my-2">
+                    <img
+                      src="/images/pfps/3.jpg"
+                      class="rounded-circle object-fit-cover"
+                      width="30"
+                      height="30"
+                      alt="logo"
+                    />
+                    <span class="card-text">DevQuick</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card p-1 mb-5">
+                  <a href="watch.html">
+                    <img
+                      src="images/thumbnails/4.jpg"
+                      class="card-img-top"
+                      alt="card image"
+                    />
+                    <div class="card-body ">
+                      <p class="card-text">نصائح React التي تمنيت معرفتها</p>
+                    </div>
+                  </a>
+                  <div class="card-footer">
+                    <div class="container">
+                      <i class="fa-solid fa-film"></i>
+                      <span class="text-muted">213 ألف</span>
+                    </div>
+                    <div class="container">
+                      <i class="fa-solid fa-clock"></i>
+                      <span class="text-muted">9:58</span>
+                    </div>
+                  </div>
+                  <a href="channel.html" class="channel-img mx-4 my-2">
+                    <img
+                      src="/images/pfps/4.jpg"
+                      class="rounded-circle object-fit-cover"
+                      width="30"
+                      height="30"
+                      alt="logo"
+                    />
+                    <span class="card-text">FlexReact</span>
+                  </a>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="card p-1 mb-5">
+                  <a href="watch.html">
+                    <img
+                      src="images/thumbnails/5.jpg"
+                      class="card-img-top"
+                      alt="card image"
+                    />
+                    <div class="card-body ">
+                      <p class="card-text">هذه أداة الذكاء الاصطناعي غيرت كل شيء</p>
+                    </div>
+                  </a>
+                  <div class="card-footer">
+                    <div class="container">
+                      <i class="fa-solid fa-film"></i>
+                      <span class="text-muted">670 ألف</span>
+                    </div>
+                    <div class="container">
+                      <i class="fa-solid fa-clock"></i>
+                      <span class="text-muted">FutureMind</span>
+                    </div>
+                  </div>
+                  <a href="channel.html" class="channel-img mx-4 my-2">
+                    <img
+                      src="/images/pfps/5.jpg"
                       class="rounded-circle object-fit-cover"
                       width="30"
                       height="30"
@@ -147,33 +283,33 @@
                 <div class="card p-1 mb-5">
                   <a href="watch.html">
                     <img
-                      src="images/luffy.jpg"
+                      src="images/thumbnails/6.jpg"
                       class="card-img-top"
                       alt="card image"
                     />
                     <div class="card-body ">
-                      <p class="card-text">لووووووووووووووووفييي</p>
+                      <p class="card-text">جربت تحديات البرمجة المنتشرة</p>
                     </div>
                   </a>
                   <div class="card-footer">
                     <div class="container">
                       <i class="fa-solid fa-film"></i>
-                      <span class="text-muted">3 ألاف مشاهدة</span>
+                      <span class="text-muted">330 ألف</span>
                     </div>
                     <div class="container">
                       <i class="fa-solid fa-clock"></i>
-                      <span class="text-muted">03:00:00</span>
+                      <span class="text-muted">10:41</span>
                     </div>
                   </div>
                   <a href="channel.html" class="channel-img mx-4 my-2">
                     <img
-                      src="/images/luffy.jpg"
+                      src="/images/pfps/6.jpg"
                       class="rounded-circle object-fit-cover"
                       width="30"
                       height="30"
                       alt="logo"
                     />
-                    <span class="card-text">قناة لوفي</span>
+                    <span class="card-text">DevTryz</span>
                   </a>
                 </div>
               </div>
@@ -181,33 +317,33 @@
                 <div class="card p-1 mb-5">
                   <a href="watch.html">
                     <img
-                      src="images/luffy.jpg"
+                      src="images/thumbnails/7.jpg"
                       class="card-img-top"
                       alt="card image"
                     />
                     <div class="card-body ">
-                      <p class="card-text">لووووووووووووووووفييي</p>
+                      <p class="card-text">أهم 5 أخطاء يقع فيها المبتدئون في المونتاج</p>
                     </div>
                   </a>
                   <div class="card-footer">
                     <div class="container">
                       <i class="fa-solid fa-film"></i>
-                      <span class="text-muted">3 ألاف مشاهدة</span>
+                      <span class="text-muted">58 ألف</span>
                     </div>
                     <div class="container">
                       <i class="fa-solid fa-clock"></i>
-                      <span class="text-muted">03:00:00</span>
+                      <span class="text-muted">4:59</span>
                     </div>
                   </div>
                   <a href="channel.html" class="channel-img mx-4 my-2">
                     <img
-                      src="/images/luffy.jpg"
+                      src="/images/pfps/7.jpg"
                       class="rounded-circle object-fit-cover"
                       width="30"
                       height="30"
                       alt="logo"
                     />
-                    <span class="card-text">قناة لوفي</span>
+                    <span class="card-text"></span>
                   </a>
                 </div>
               </div>
@@ -215,163 +351,27 @@
                 <div class="card p-1 mb-5">
                   <a href="watch.html">
                     <img
-                      src="images/luffy.jpg"
+                      src="images/thumbnails/9.jpg"
                       class="card-img-top"
                       alt="card image"
                     />
                     <div class="card-body ">
-                      <p class="card-text">لووووووووووووووووفييي</p>
+                      <p class="card-text">تخلص من اللاگ إلى الأبد</p>
                     </div>
                   </a>
                   <div class="card-footer">
                     <div class="container">
                       <i class="fa-solid fa-film"></i>
-                      <span class="text-muted">3 ألاف مشاهدة</span>
+                      <span class="text-muted">1.8 مليون</span>
                     </div>
                     <div class="container">
                       <i class="fa-solid fa-clock"></i>
-                      <span class="text-muted">03:00:00</span>
+                      <span class="text-muted">BoostedTech</span>
                     </div>
                   </div>
                   <a href="channel.html" class="channel-img mx-4 my-2">
                     <img
-                      src="/images/luffy.jpg"
-                      class="rounded-circle object-fit-cover"
-                      width="30"
-                      height="30"
-                      alt="logo"
-                    />
-                    <span class="card-text">قناة لوفي</span>
-                  </a>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-3">
-                <div class="card p-1 mb-5">
-                  <a href="watch.html">
-                    <img
-                      src="images/luffy.jpg"
-                      class="card-img-top"
-                      alt="card image"
-                    />
-                    <div class="card-body ">
-                      <p class="card-text">لووووووووووووووووفييي</p>
-                    </div>
-                  </a>
-                  <div class="card-footer">
-                    <div class="container">
-                      <i class="fa-solid fa-film"></i>
-                      <span class="text-muted">3 ألاف مشاهدة</span>
-                    </div>
-                    <div class="container">
-                      <i class="fa-solid fa-clock"></i>
-                      <span class="text-muted">03:00:00</span>
-                    </div>
-                  </div>
-                  <a href="channel.html" class="channel-img mx-4 my-2">
-                    <img
-                      src="/images/luffy.jpg"
-                      class="rounded-circle object-fit-cover"
-                      width="30"
-                      height="30"
-                      alt="logo"
-                    />
-                    <span class="card-text">قناة لوفي</span>
-                  </a>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-3">
-                <div class="card p-1 mb-5">
-                  <a href="watch.html">
-                    <img
-                      src="images/luffy.jpg"
-                      class="card-img-top"
-                      alt="card image"
-                    />
-                    <div class="card-body ">
-                      <p class="card-text">لووووووووووووووووفييي</p>
-                    </div>
-                  </a>
-                  <div class="card-footer">
-                    <div class="container">
-                      <i class="fa-solid fa-film"></i>
-                      <span class="text-muted">3 ألاف مشاهدة</span>
-                    </div>
-                    <div class="container">
-                      <i class="fa-solid fa-clock"></i>
-                      <span class="text-muted">03:00:00</span>
-                    </div>
-                  </div>
-                  <a href="channel.html" class="channel-img mx-4 my-2">
-                    <img
-                      src="/images/luffy.jpg"
-                      class="rounded-circle object-fit-cover"
-                      width="30"
-                      height="30"
-                      alt="logo"
-                    />
-                    <span class="card-text">قناة لوفي</span>
-                  </a>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-3">
-                <div class="card p-1 mb-5">
-                  <a href="watch.html">
-                    <img
-                      src="images/luffy.jpg"
-                      class="card-img-top"
-                      alt="card image"
-                    />
-                    <div class="card-body ">
-                      <p class="card-text">لووووووووووووووووفييي</p>
-                    </div>
-                  </a>
-                  <div class="card-footer">
-                    <div class="container">
-                      <i class="fa-solid fa-film"></i>
-                      <span class="text-muted">3 ألاف مشاهدة</span>
-                    </div>
-                    <div class="container">
-                      <i class="fa-solid fa-clock"></i>
-                      <span class="text-muted">03:00:00</span>
-                    </div>
-                  </div>
-                  <a href="channel.html" class="channel-img mx-4 my-2">
-                    <img
-                      src="/images/luffy.jpg"
-                      class="rounded-circle object-fit-cover"
-                      width="30"
-                      height="30"
-                      alt="logo"
-                    />
-                    <span class="card-text">قناة لوفي</span>
-                  </a>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-3">
-                <div class="card p-1 mb-5">
-                  <a href="watch.html">
-                    <img
-                      src="images/luffy.jpg"
-                      class="card-img-top"
-                      alt="card image"
-                    />
-                    <div class="card-body ">
-                      <p class="card-text">لووووووووووووووووفييي</p>
-                    </div>
-                  </a>
-                  <div class="card-footer">
-                    <div class="container">
-                      <i class="fa-solid fa-film"></i>
-                      <span class="text-muted">3 ألاف مشاهدة</span>
-                    </div>
-                    <div class="container">
-                      <i class="fa-solid fa-clock"></i>
-                      <span class="text-muted">03:00:00</span>
-                    </div>
-                  </div>
-                  <a href="channel.html" class="channel-img mx-4 my-2">
-                    <img
-                      src="/images/luffy.jpg"
+                      src="/images/pfps/9.jpg"
                       class="rounded-circle object-fit-cover"
                       width="30"
                       height="30"
@@ -382,7 +382,7 @@
                 </div>
               </div>
             </div>
-          
+        
         </div>
       </div>
     </div>
