The search page basic structure

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </li>
               <li class="nav-item">
                 <a
-                  class="nav-link btn btn-outline-info text-info"
+                  class="nav-link btn btn-outline-info text-info d-inline-block"
                   href="index.html"
                   data-toggle="modal"
                   data-target="#loginmodal"
@@ -41,16 +41,16 @@
                 >
               </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <div class="form-inline my-2 my-lg-0">
               <input
                 class="form-control mr-sm-2"
                 type="search"
                 placeholder="إبحث"
               />
-              <button class="btn btn-info my-2 my-sm-0" type="submit">
+              <button onclick="location.href='search.html';" class="btn btn-info my-2 my-sm-0" type="submit">
                 إبحث
               </button>
-            </form>
+            </div>
           </div>
         </nav>
         <!-- Modal -->
@@ -382,7 +382,6 @@
                 </div>
               </div>
             </div>
-        
         </div>
       </div>
     </div>
